Fix dissolution recipe errors in JEI integration